--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,6 +5,36 @@
   padding: .8rem 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.header-section {
+  display: flex;
+}
+
+.header-logo {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+.header-links {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 0 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header-link {
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+
+  &:hover {
+    border-bottom: 2px solid white;
+  }
 }
 
 .header-logout {
